# PRISM

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
benchmark_results/: comparative_results_20250401_160804.json  comparative_results_20250401_161455.json  pubchem_dataset.json
configs/: default.json
docs/: conf.py  index.rst
prism/: __init__.py
prism/algorithm/: __init__.py  graph_matcher.py  seed_selection.py
prism/benchmark/: __init__.py  generate_benchmark_dataset.py  run_benchmark.py  run_comparative_benchmark.py  visualize_benchmark.py
prism/benchmark/adapters/: algorithm_adapters.py
prism/benchmark/configs/: benchmark_config.py
prism/benchmark/core/: comparative_metrics.py  metrics.py
prism/benchmark/services/: benchmark.py  comparative_benchmark.py  comparative_visualizer.py  dataset_generator.py  visualizer.py
prism/benchmark/utils/: analyze_atoms.py  check_algorithms.py
prism/configs/: default.json
prism/core/: __init__.py  compatibility_matrix.py  molecular_graph.py  molecular_pair.py  node_signature.py
prism/optimization_results/: best_config.json  best_params_20250401_141717.json  best_params_20250401_141801.json
prism/tests/: __init__.py  test_algorithm_adapters.py  test_dataset_generator.py  test_input_handler.py  test_molecular_graph.py
prism/utils/: hyperparameter_tuning.py  input_handler.py  visualization.py
tests/: test_algorithm_adapters.py  test_dataset_generator.py  test_molecular_graph.py
